# axcioma

./: .clang-tidy  .cmake-format  .dockerignore  .envrc  .gitignore  .install.sh  .notes.txt  CMakeLists.txt  README.adoc  build-taox11-for-osx.sh  build-taox11-on-darwin.sh  build-taox11-on-linux.sh  build-taox11-on-windows.bat  requirements.txt  taox11-system_exception.patch  todo.txt
.devcontainer/: Dockerfile  docker.md
.github/workflows/: docker-image.yml  linux.yml
brix11/lib/brix11/: system.rb
brix11/lib/brix11/brix/common/cmds/: bootstrap.rb
brix11/lib/brix11/brix/common/cmds/configure/: ace_config.rb
cmake/: CPM.cmake  GenerateTaoIdl.cmake  GlobalSettings.cmake
etc/: brix11rc
